--- a/package.json
+++ b/package.json
@@ -27,11 +27,8 @@
     "jscs": "jscs ."
   },
   "dependencies": {
-    "babel-cli": "^6.4.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    
     "autoprefixer": "^6.0.3",
+    "babel-cli": "^6.4.0",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -41,7 +38,10 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
     "html-webpack-plugin": "^1.6.1",
+    "immutable": "^3.7.6",
     "postcss-loader": "^0.6.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2"
