--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "html-webpack-plugin": "^1.6.1",
     "immutable": "^3.7.6",
+    "lodash": "^4.9.0",
     "postcss-loader": "^0.6.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
