--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "postcss-loader": "^0.6.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-redux": "^4.4.2",
+    "redux": "^3.4.0",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2"
