--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
+    "redux-promise": "^0.5.3",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2"
