--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "autoprefixer": "^6.0.3",
+    "axios": "^0.9.1",
     "babel-cli": "^6.4.0",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.3.13",
