--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.4.2",
+    "react-router": "^2.3.0",
     "redux": "^3.4.0",
     "redux-promise": "^0.5.3",
     "request": "^2.71.0",
