--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux": "^3.4.0",
     "redux-form": "^5.0.1",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.0.1",
     "request": "^2.71.0",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
