--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.3.13",
+    "body-parser": "^1.15.0",
     "css-loader": "^0.19.0",
     "d3": "^3.5.16",
     "express": "^4.13.3",
