--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "html-webpack-plugin": "^1.6.1",
     "immutable": "^3.7.6",
     "lodash": "^4.9.0",
+    "mongoose": "^4.4.12",
+    "morgan": "^1.7.0",
     "postcss-loader": "^0.6.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
