--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "html-webpack-plugin": "^1.6.1",
     "immutable": "^3.7.6",
+    "jwt-simple": "^0.5.0",
     "lodash": "^4.9.0",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
