--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
+    "passport-local": "^1.0.0",
     "postcss-loader": "^0.6.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
