--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^4.5.3",
+    "pg-hstore": "^2.3.2",
     "postcss-loader": "^0.6.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
@@ -60,6 +62,8 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.0.1",
     "request": "^2.71.0",
+    "sequelize": "^3.21.0",
+    "sequelize-cli": "^2.3.1",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2"
