--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "d3": "^3.5.16",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^1.6.1",
+    "img-loader": "^1.2.2",
     "immutable": "^3.7.6",
     "jwt-simple": "^0.5.0",
     "lodash": "^4.9.0",
@@ -65,6 +67,7 @@
     "sequelize-cli": "^2.3.1",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2"
   },
   "devDependencies": {
