--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.19.0",
     "d3": "^3.5.16",
     "express": "^4.13.3",
