--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.9.1",
     "babel-cli": "^6.4.0",
     "babel-loader": "^6.2.3",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.0",
